breeding ui bottom outline fix, scrollbar style, start item modal inner

--- a/src/scss/default-styles.scss
+++ b/src/scss/default-styles.scss
@@ -6,6 +6,31 @@
   background: $highlight-bright; /* WebKit/Blink Browsers */
 }
 
+
+/*scrollbars*/
+
+
+// firefox
+* {
+  scrollbar-width: thin;
+  scrollbar-color: $highlight-default $bg-dark;
+}
+// webkit
+*::-webkit-scrollbar {
+  width: 12px;
+}
+*::-webkit-scrollbar-track {
+  background: none;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: $highlight-default;
+  border-radius: 20px;
+  border: 3px solid $bg-dark;
+}
+
+/*general*/
+
+
 html,
 body {
   margin: 0;
